# WPL

./: CMakeLists.txt
.github/workflows/: build.yml
include/: wpl.hpp
src/: audio.cpp  graphics.cpp  input.cpp  main.cpp
